--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,20 @@
   text-align: center;
 }
 
-.App-logo {
+.button {
+  background-color: #ef7c8e;
+  color: #eee;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 5px 15px;
+}
+
+.button:hover {
+  background-color: white;
+  color: black;
+}
+
+/* .App-logo {
   animation: App-logo-spin infinite 10s linear;
   height: 80px;
 }
@@ -21,7 +34,7 @@
 
 .App-intro {
   font-size: large;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
