--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,32 @@
 .App {
-  background-color: #83c5be;
   text-align: center;
 }
 
-.Button {
-  background-color: #ef7c8e;
-  color: #eee;
-  cursor: pointer;
-  border-radius: 5px;
-  padding: 5px 15px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.Button:hover {
-  background-color: white;
-  color: black;
-}
-
-/* .App-logo {
-  animation: App-logo-spin infinite 10s linear;
-  height: 80px;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.App-link {
+  color: #61dafb;
 }
-
-.App-intro {
-  font-size: large;
-} */
 
 @keyframes App-logo-spin {
   from {
